* Work-around for VCL-loading issue (apparently a race condition somewhere).
git-svn-id: http://varnish-cache.org/svn/trunk@1851 d4fa192b-c00b-0410-8231-f00ffab90ce4

--- a/varnish-tools/regress/lib/Varnish/Test/Report/report.html
+++ b/varnish-tools/regress/lib/Varnish/Test/Report/report.html
@@ -34,7 +34,7 @@ tr.fail { background-color: #ffeeee; }
 	</tr>
       </thead>
 <!-- FOREACH case = cases -->
-<!-- IF case.pass == case.count -->
+<!-- IF case.fail == 0 -->
       <tr class="pass">
 <!-- ELSE -->
       <tr class="fail">
