Add $NOTES as a hack to document the fact that we know 1.1.2 fails some of the tests.  This should be revisited later; ideally, the framework should know which tests are expected to pass and which are expected to fail, and flag any deviation (if a test is expected to fail but passes, it is probable that the test is broken)
git-svn-id: http://varnish-cache.org/svn/trunk@2297 d4fa192b-c00b-0410-8231-f00ffab90ce4

--- a/varnish-tools/regress/lib/Varnish/Test/Report/report.html
+++ b/varnish-tools/regress/lib/Varnish/Test/Report/report.html
@@ -16,7 +16,8 @@ tr.fail { background-color: #ffeeee; }
 .pass { width: 5%; }
 .fail { width: 5%; }
 .time { width: 5%; text-align: right; }
-.descr { width: 70%; }
+.descr { width: 50%; }
+.notes { width: 20%; }
     </style>
   </head>
 <!-- USE ms = format('%5.3f') -->
@@ -31,6 +32,7 @@ tr.fail { background-color: #ffeeee; }
 	  <th class="fail">Fail</th>
 	  <th class="time">Time</th>
 	  <th class="descr">Description</th>
+	  <th class="notes">Notes</th>
 	</tr>
       </thead>
 <!-- FOREACH case = cases -->
@@ -45,6 +47,7 @@ tr.fail { background-color: #ffeeee; }
 	<td class="fail"><!-- case.fail --></td>
 	<td class="time"><!-- ms(case.time) --> s</td>
 	<td class="descr"><!-- case.descr --></td>
+	<td class="notes"><!-- case.notes --></td>
       </tr>
 <!-- END -->
       <tfoot>
@@ -55,6 +58,7 @@ tr.fail { background-color: #ffeeee; }
 	  <td class="fail"><!-- fail --></td>
 	  <td class="time"><!-- ms(time) --> s</td>
 	  <td class="descr">&nbsp;</td>
+	  <td class="notes">&nbsp;</td>
 	</tr>
       </tfoot>
     </table>
